Visual indication for parameters supported by Alexa

--- a/src/uzd.html
+++ b/src/uzd.html
@@ -1,4 +1,12 @@
 <script src="ga_dating_functions.js"></script>
+<style>
+.inline-img
+{
+    height: 1em; 
+    width: 1em;
+    display: none; ///inline
+}
+</style>
 
 <form class="mb-0 px-3" id="uzd">
   <div class="form-row">
@@ -89,7 +97,7 @@
   <div class="row">
     <div class="col-md-6">
       <div class="form-group  mt-0 mb-1">
-        <label class="mr-2  my-0">BPD</label>
+        <label class="mr-2  my-0">BPD <img class="inline-img" src="img/alexa_logo.png"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="bpd2ga"></select></div>
           <input type="number" class="form-control no-spin" step="any" min="0" id="bpd_mm" purpose="biometric" ga_dating="bpd2ga-input">
@@ -102,7 +110,7 @@
     </div>
     <div class="col-md-6">
       <div class="form-group  mt-0 mb-1">
-        <label class="mr-2  my-0">OFD</label>
+        <label class="mr-2  my-0">OFD <img class="inline-img" src="img/alexa_logo.png"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="ofd2ga"></select></div>
           <input type="number" class="form-control no-spin" step="any" min="0" id="ofd_mm" purpose="biometric" ga_dating="ofd2ga-input">
@@ -117,7 +125,7 @@
   <div class="row">
     <div class="col-md-6">
       <div class="form-group  mt-0 mb-1">
-        <label class="mr-2  my-0">HC</label>
+        <label class="mr-2  my-0">HC <img class="inline-img" src="img/alexa_logo.png"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="hc2ga"></select></div>
           <input type="number" class="form-control no-spin" step="any" min="0" id="hc_mm" purpose="biometric" ga_dating="hc2ga-input">
@@ -130,7 +138,7 @@
     </div>
     <div class="col-md-6">
       <div class="form-group  mt-0 mb-1">
-        <label class="mr-2  my-0">Vp</label>
+        <label class="mr-2  my-0">Vp <img class="inline-img" src="img/alexa_logo.png"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="vp2ga"></select></div>
           <input type="number" class="form-control no-spin" step="any" min="0" id="vp_mm" purpose="biometric" ga_dating="vp2ga-input">
@@ -525,8 +533,19 @@
     $("form#uzd input#prm").change(function(){calculate_gv();}); 
     $("form#uzd input#exam_date").change(function(){calculate_gv();}); 
     setUpBiometricControls();
-    registerAlexaEventHandler($("form").attr("id"), function(event, msg){ //the _key parameter will be used to pass the event only to that handler whose form is currenlty active.
+    registerAlexaEventHandler($("form").attr("id"), function(event, msg){
       console.log(event, msg);
+      if (event == 'message')
+        if (!msg.second_value)
+          $("form#uzd input#"+msg.parameter).val(msg.first_value);
+        else
+          $("form#uzd input#"+msg.parameter).val(msg.first_value+msg.second_value);
+      
+      if (event == 'connected')
+        $(".inline-img").css("display","inline");
+      
+      if (event == 'disconnected')
+        $(".inline-img").css("display","none");      
     }); 
   });
 
