--- a/src/uzd.html
+++ b/src/uzd.html
@@ -153,7 +153,7 @@
   <div class="row">
     <div class="col-md">
       <div class="form-group  mt-0 mb-1">
-        <label class="mr-2  my-0">TCD</label>
+        <label class="mr-2  my-0">TCD <img class="inline-img"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="tcd2ga"></select></div>
           <input type="number" class="form-control no-spin" step="any" min="0" id="tcd_mm" purpose="biometric" ga_dating="tcd2ga-input">
@@ -166,7 +166,7 @@
     </div>
     <div class="col-md">
       <div class="form-group  mt-0 mb-1">
-        <label class="mr-2  my-0">CM</label>
+        <label class="mr-2  my-0">CM <img class="inline-img"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="cm2ga"></select></div>
           <input type="number" class="form-control no-spin" step="any" min="0" id="cm_mm" purpose="biometric" ga_dating="cm2ga-input">
@@ -181,7 +181,7 @@
   <div class="row">
     <div class="col-md">
       <div class="form-group  mt-0 mb-1">
-        <label class="mr-2  my-0">NF</label>
+        <label class="mr-2  my-0">NF <img class="inline-img"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="nf2ga"></select></div>
           <input type="number" class="form-control" min="0" step="any" id="nf_mm" purpose="biometric" ga_dating="nf2ga-input">
@@ -194,7 +194,7 @@
     </div>
     <div class="col-md">
       <div class="form-group  mt-0 mb-1">
-        <label class="mr-2  my-0">NB</label>
+        <label class="mr-2  my-0">NB <img class="inline-img"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="nb2ga"></select></div>
           <input type="number" class="form-control" min="0" step="any" id="nb_mm" purpose="biometric" ga_dating="nb2ga-input">
@@ -209,7 +209,7 @@
   <div class="row">
     <div class="col-md">
       <div class="form-group  mt-0 mb-1">
-        <label class="mr-2  my-0">APAD</label>
+        <label class="mr-2  my-0">APAD <img class="inline-img"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="apad2ga"></select></div>
           <input type="number" class="form-control" min="0" step="any" id="apad_mm" purpose="biometric" ga_dating="apad2ga-input">
@@ -222,7 +222,7 @@
     </div>
     <div class="col-md">
       <div class="form-group  mt-0 mb-1">
-        <label class="mr-1  my-0">TAD</label>
+        <label class="mr-1  my-0">TAD <img class="inline-img"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="tad2ga"></select></div>
           <input type="number" class="form-control" min="0" step="any" id="tad_mm" purpose="biometric" ga_dating="tad2ga-input">
@@ -237,7 +237,7 @@
   <div class="row">
     <div class="col-md">
       <div class="form-group mt-0 mb-1">
-        <label class="mr-2 my-0">AC</label>
+        <label class="mr-2 my-0">AC <img class="inline-img"></label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="ac2ga"></select></div>
           <input type="number" class="form-control no-spin" step="any" min="0" id="ac_mm" purpose="biometric" ga_dating="ac2ga-input">
@@ -250,7 +250,7 @@
     </div>
     <div class="col-md">
       <div class="form-group mt-0 mb-1">
-        <label class="mr-2 my-0">FL</label>
+        <label class="mr-2 my-0">FL<img class="inline-img"> </label>
         <div class="input-group input-group-sm">
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="fl2ga"></select></div>
           <input type="number" class="form-control no-spin" step="any" min="0" id="fl_mm" purpose="biometric" ga_dating="fl2ga-input">
@@ -265,22 +265,22 @@
   <div class="row">
     <div class="col-md">
       <div class="form-group mt-0 mb-1">
-        <label class="mr-1 my-0">EFW</label>
+        <label class="mr-1 my-0">EFW <img class="inline-img"></label>
         <div class="input-group input-group-sm">
-          <input type="number" class="form-control" step="any" min="0" id="efw_mm">
+          <input type="number" class="form-control" step="any" min="0" id="efw">
           <div class="input-group-append"><span class="input-group-text">g</span></div>
         </div>
       </div>
     </div>
     <div class="col-md">
       <div class="form-group mt-0 mb-1">
-        <label class="mr-1 my-0">LA</label>
+        <label class="mr-1 my-0">LA <img class="inline-img"></label>
         <div class="input-group input-group-sm"><input type="text" class="form-control" min="0" id="la"></div>
       </div>
     </div>
     <div class="col-md">
       <div class="form-group mt-0 mb-1">
-        <label class="mr-1 my-0">LC</label>
+        <label class="mr-1 my-0">LC <img class="inline-img"></label>
         <div class="input-group input-group-sm"><input type="text" class="form-control" min="0" id="lc"></div>
       </div>
     </div>
@@ -535,7 +535,7 @@
     setUpBiometricControls();
     $("img.inline-img").attr("src", "img/icon_108_A2Z.png");
     registerAlexaEventHandler($("form").attr("id"), function(event, msg){
-      console.log(event, msg);
+      console.debug(event, msg);
       if (event == 'message')
         if (msg.second_value == 'undefined')
           $("form#uzd input#"+msg.parameter).val(msg.first_value);
