some input fields were with wrong format. corrected

--- a/src/uzd.html
+++ b/src/uzd.html
@@ -186,7 +186,7 @@
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="nf2ga"></select></div>
           <input type="number" class="form-control" min="0" step="any" id="nf_mm" purpose="biometric" ga_dating="nf2ga-input">
           <div class="input-group-append"><span class="input-group-text">mm</span></div>
-          <input type="number" class="form-control" min="0" id="nf_gs" purpose="biometric" ga_dating="nf2ga-output">
+          <input type="tel" class="form-control" min="0" id="nf_gs" purpose="biometric" ga_dating="nf2ga-output">
           <div class="input-group-append"><span class="input-group-text">с+д</span></div>
         </div>
         <small><span class="form-text text-muted mt-0" purpose="biometric" ga_dating="nf2ga"></span></small>
@@ -199,7 +199,7 @@
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="nb2ga"></select></div>
           <input type="number" class="form-control" min="0" step="any" id="nb_mm" purpose="biometric" ga_dating="nb2ga-input">
           <div class="input-group-append"><span class="input-group-text">mm</span></div>
-          <input type="number" class="form-control" min="0" id="nb_gs" purpose="biometric" ga_dating="nb2ga-output">
+          <input type="tel" class="form-control" min="0" id="nb_gs" purpose="biometric" ga_dating="nb2ga-output">
           <div class="input-group-append"><span class="input-group-text">с+д</span></div>
         </div>
         <small><span class="form-text text-muted mt-0" purpose="biometric" ga_dating="nb2ga"></span></small>
@@ -214,7 +214,7 @@
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="apad2ga"></select></div>
           <input type="number" class="form-control" min="0" step="any" id="apad_mm" purpose="biometric" ga_dating="apad2ga-input">
           <div class="input-group-append"><span class="input-group-text">mm</span></div>
-          <input type="number" class="form-control" min="0" id="apad_gs" purpose="biometric" ga_dating="apad2ga-output">
+          <input type="tel" class="form-control" min="0" id="apad_gs" purpose="biometric" ga_dating="apad2ga-output">
           <div class="input-group-append"><span class="input-group-text">с+д</span></div>
         </div>
         <small><span class="form-text text-muted mt-0" purpose="biometric" ga_dating="apad2ga"></span></small>
@@ -227,7 +227,7 @@
           <div class="input-group-prepend"><select class="form-control form-control-sm" purpose="biometric" ga_dating="tad2ga"></select></div>
           <input type="number" class="form-control" min="0" step="any" id="tad_mm" purpose="biometric" ga_dating="tad2ga-input">
           <div class="input-group-append"><span class="input-group-text">mm</span></div>
-          <input type="number" class="form-control" min="0" id="tad_gs" purpose="biometric" ga_dating="tad2ga-output">
+          <input type="tel" class="form-control" min="0" id="tad_gs" purpose="biometric" ga_dating="tad2ga-output">
           <div class="input-group-append"><span class="input-group-text">с+д</span></div>
         </div>
         <small><span class="form-text text-muted mt-0" purpose="biometric" ga_dating="tad2ga"></span></small>
@@ -274,13 +274,13 @@
     </div>
     <div class="col-md">
       <div class="form-group mt-0 mb-1">
-        <label class="mr-1 my-0">LA <img class="inline-img"></label>
+        <label class="mr-1 my-0">LA</label>
         <div class="input-group input-group-sm"><input type="text" class="form-control" min="0" id="la"></div>
       </div>
     </div>
     <div class="col-md">
       <div class="form-group mt-0 mb-1">
-        <label class="mr-1 my-0">LC <img class="inline-img"></label>
+        <label class="mr-1 my-0">LC</label>
         <div class="input-group input-group-sm"><input type="text" class="form-control" min="0" id="lc"></div>
       </div>
     </div>
